@@ -29,7 +29,9 @@
  * This should be incremented at least each time a new symbol is added
  * to the header.
  */
+#ifndef OUT123_API_VERSION
 #define OUT123_API_VERSION @OUTAPI_VERSION@
+#endif
 
 #ifndef MPG123_EXPORT
 /** Defines needed for MS Visual Studio(tm) DLL builds.
